--- a/GrapheneTrace/Views/Shared/_Layout.cshtml
+++ b/GrapheneTrace/Views/Shared/_Layout.cshtml
@@ -43,11 +43,21 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Admin/Index">Admin Dashboard</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Admin/Patients">Patients</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Admin/Clinicians">Clinicians</a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="/Appointment/Index">Appointments</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link" href="/Alert/Clinician">Alerts</a>
+                            <a class="nav-link" href="/Admin/Feedback">Feedback</a>
                         </li>
                     }
                     @* CLINICIAN NAV *@
