--- a/GrapheneTrace/Views/Shared/_Layout.cshtml
+++ b/GrapheneTrace/Views/Shared/_Layout.cshtml
@@ -92,8 +92,16 @@
                             <a class="nav-link" href="/Feedback/Index">Feedback</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/Appointment/Index">Appointments</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/Alert/Patient">Alerts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/PatientReport/Download">Download Report</a>
+                        </li>
+
+
                     }
                 </ul>
 
