--- a/GrapheneTrace/Views/Shared/_Layout.cshtml
+++ b/GrapheneTrace/Views/Shared/_Layout.cshtml
@@ -100,8 +100,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/PatientReport/Download">Download Report</a>
                         </li>
-
-
                     }
                 </ul>
 
@@ -125,6 +123,8 @@
     <div class="container">
         @RenderBody()
     </div>
+
+    @RenderSection("Scripts", required: false)
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
